--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Horizon Empreendimentos</title>
+    <title>Lorem ipsum.</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu"/>
+</style>
 </head>
 <body>
     <header>
         <div id="headercontainer">
             <div id="headerlogo">
                 <img src="assets/botao-de-inicio.png" alt="">
-                <p>Horizon Construtora</p>
+                <p>Lorem ipsum.</p>
             </div>
-            <!--<span class="material-symbols-outlined">menu</span>
-            <p>0 (00) 00000-0000</p>-->
         </div>
         <div id="redesheader">
             <img src="assets/facebook.png" alt="">
@@ -25,21 +24,20 @@
     </header>
     <section id="hero">
         <div id="conteudo">
-            <h1>A beleza da simplicidade urbana</h1>
-            <p>Arquitetura atemporal, linhas suaves e detalhes que acolhem. Nossos empreendimentos traduzem a beleza do viver bem — com tranquilidade, sofisticação e identidade.</p>
+            <h1>Lorem ipsum dolor, sit amet.</h1>
+            <p> Quisquam illum consequuntur perferendis inventore suscipit fuga beatae tempore itaque fugit laudantium officia veritatis eius cupiditate voluptates nulla facilis sapiente, at repellat.</p>
             <div id="herobotoes">
-                <button class="botaopadrao">Ver projetos</button>
-                <button id="opcao02">Agendar visita</button>
+                <button class="botaopadrao">Lorem ipsum</button>
+                <button id="opcao02">Lorem</button>
             </div>
         </div>
     </section>
 
     <section id="sessaodestaque">
         <div class="fade-esquerda" id="conteudo">
-            <h2>Residencial La Belle Vie</h2>
-            <!--setinha apontando para o texto-->
-            <p>Inspirado na elegância da arquitetura europeia, o Residencial Vista Azul une linhas clássicas a um design contemporâneo.<br> <br>Localizado em uma área urbana estratégica, o empreendimento oferece praticidade sem abrir mão da sofisticação. Perfeito para quem valoriza beleza, conforto e uma atmosfera serena em meio ao ritmo moderno da vida urbana.</br></p> <br>
-            <p>Arquiteto @fulanodetown</p>
+            <h2>Lorem ipsum dolor, sit amet.</h2>
+            <p>Quisquam illum consequuntur perferendis inventore suscipit fuga beatae tempore itaque fugit laudantium officia veritatis eius cupiditate voluptates nulla facilis sapiente.<br> <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt exercitationem voluptate dolor odio, assumenda repellat, quisquam dicta facilis esse distinctio molestias!</br></p> <br>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
         </div>
             <img class="fade-direita" src="assets/pexels-alexfalconer-8500494.jpg" alt="">
     </section>
@@ -47,14 +45,13 @@
     <section id="sessaocasas">
         <h2 class="aparecer-cima">Lorem ipsum dolor sit amet.</h2>
         <div id="imagenscasas">
-            <img  class="fade-esquerda card" src="assets/pexels-harry-cooke-6195012.jpg" alt="">
-            <img class="card" src="assets/pexels-hilal-albayindir-150089507-18397061.jpg" alt="">
-            <img class="fade-direita card" src="assets/pexels-jovydas-2462015.jpg" alt="">
+            <img  class="fade-esquerda card" src="assets/1.jpg" alt="">
+            <img class="card" src="assets/2.jpg" alt="">
+            <img class="fade-direita card" src="assets/3.jpg" alt="">
         </div>
-        <!--Linha de slide-->
-        <div id="abaixoslide">
-            <p>Simulando barra de slide</p>
-            <button class="botaopadrao">Lorem</button>
+        <div class="aparecer-cima" id="abaixoslide">
+            <p>Lorem ipsum dolor sit amet.</p>
+            <button class="botaopadrao">Lorem ipsum</button>
         </div>
     </section>
 
@@ -75,7 +72,7 @@
   }
 
   window.addEventListener('scroll', animarScroll);
-  window.addEventListener('load', animarScroll); // já anima o que estiver visível ao carregar
+  window.addEventListener('load', animarScroll);
 
 const elementosCima = document.querySelectorAll('.aparecer-cima');
 
@@ -92,12 +89,9 @@ function animarScrollCima() {
   });
 }
 
-// Já chama junto com a função principal, ou crie um listener separado
 window.addEventListener('scroll', animarScrollCima);
 window.addEventListener('load', animarScrollCima);
 
 </script>
 </body>
 </html> 
-
-<!--Testando atalho-->
