--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lorem ipsum.</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/mediaqueries.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu"/>
 </style>
 </head>
@@ -49,7 +50,7 @@
             <img class="card" src="assets/2.jpg" alt="">
             <img class="fade-direita card" src="assets/3.jpg" alt="">
         </div>
-        <div class="aparecer-cima" id="abaixoslide">
+        <div class="aparecer-cima" id="partebaixo">
             <p>Lorem ipsum dolor sit amet.</p>
             <button class="botaopadrao">Lorem ipsum</button>
         </div>
