--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
 
     <section id="sessaodestaque">
-        <div class="fade-esquerda" id="conteudo">
+        <div class="fade-esquerda" id="conteudodestaque">
             <h2>Lorem ipsum dolor, sit amet.</h2>
             <p>Quisquam illum consequuntur perferendis inventore suscipit fuga beatae tempore itaque fugit laudantium officia veritatis eius cupiditate voluptates nulla facilis sapiente.<br> <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt exercitationem voluptate dolor odio, assumenda repellat, quisquam dicta facilis esse distinctio molestias!</br></p> <br>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
